# OOP

LR_1/LR_1/: LR_1.pro  actions.cpp  actions.h  controller.cpp  controller.h  dot.cpp  dot.h  draw.cpp  draw.h  edge.cpp  edge.h  errors.h  input.txt  io.cpp  io.h  main_scene.cpp  main_scene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  octahedron.txt  output.txt  sims.txt  stream.cpp  stream.h
LR_1/build-LR_1-Desktop_Qt_5_12_2_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
LR_1/build-LR_1-Desktop_Qt_5_12_2_clang_64bit-Release/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
LR_2/: .project  CMakeLists.txt  baseiterator.h  baseiterator_impl.h  basevector.h  basevector_impl.h  constvectoriterator.h  constvectoriterator_impl.h  exceptions.h  main.cpp  mathvector.h  mathvector_impl.h  mathvectorspace.h  vectoriterator.h  vectoriterator_impl.h
LR_2/.metadata/: version.ini
LR_2/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
LR_2/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
LR_2/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
LR_3/LR_3/: LR_3.pro  cabin.cpp  cabin.h  controlpanel.cpp  controlpanel.h  doors.cpp  doors.h  elevator.cpp  elevator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  timing.h
LR_3/build-LR_3-Desktop_Qt_5_12_3_clang_64bit-Debug/: Makefile  moc_cabin.cpp  moc_doors.cpp  (+4 more)
build-LR_2-Desktop_Qt_5_12_3_clang_64bit-u041fu043e-u0443u043cu043eu043bu0447u0430u043du0438u044e/: CMakeCache.txt  LR_2  LR_2.cbp  Makefile  cmake_install.cmake
(+88 files in other folders)
